<resources>
    <!-- Shared String -->
    <string name="app_name">Dotify</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account_title">Create Account</string>
    <string name="forget_password_title">Forget Password</string>
    <string name="connection_failed">Connection Failed, Please Try Again</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="select_a_playlist">Select A Playlist</string>

    <!-- App Key -->
    <string name="appKey">DotifyOnline-327</string>
    <string name="base_URL">https://www.dotify.online/</string>
    <string name="udp_URL">www.dotify.online</string>

    <!-- Login -->
    <string name="empty_login_entry">Username or Password Can\'t Be Empty</string>
    <string name="invalid_credential">Invalid Username or Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <!-- Create Account -->
    <string name="create_account">Create</string>
    <string name="back">Back</string>
    <string name="security_questions1">Security Questions 1</string>
    <string name="security_questions2">Security Questions 2</string>
    <string name="confirm_password_not_match">Password Do Not Match</string>
    <string name="weak_password">Password must contain at least one of (a-z, A-Z, 0-9, Special Character)</string>
    <string name="submit">Submit</string>
    <string name="username_taken">Username is taken</string>
    <string name="answer">Answer</string>
    <string-array name="security_questions_array">
        <item>Security Questions</item>
        <item>Favorite Anime</item>
        <item>Favorite Ice Cream Flavor</item>
        <item>Favorite Color</item>
        <item>Favorite Tree</item>
        <item>Favorite Sand</item>
        <item>Favorite Ox</item>
    </string-array>

    <!-- Main Activity -->
    <string name="title_activity_main">Main Activity</string>
    <string name="search">Search</string>
    <string name="playlists">Playlists</string>
    <string name="profile">Profile</string>
    <string name="for_you">For You</string>

    <!-- Play Lists -->
    <string name="empty_playlist_name_error">Name Can Not Be Empty</string>
    <string name="edit">Edit</string>
    <string name="create_playlist_name">Playlist Name</string>
    <string name="create_playlist">Create</string>
    <string name="duplicate_playlist_name_error">Playlist Name Already Exists, Try Again</string>

    <!-- Reset Password -->
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>

    <!--Profile Info -->
    <string name="date_joined">Date Joined:</string>
    <string name="most_played">Most Played:</string>
    <string name="time_spent">Time Spent:</string>
    <string name="logout">Log Out</string>

    <!--Search Fragment-->
    <string name="search_info">Search For Songs and Artists</string>

    <!-- Server Messages -->
    <string name="server_down">The server is currently down. Try again later.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
