<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearlayout1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/usernameDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/dateJoined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_joined"
            android:layout_marginTop="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <TextView
            android:id="@+id/mostPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_played"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/timeSpent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_spent"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:text="@string/logout"/>

    </LinearLayout>




</android.support.constraint.ConstraintLayout>