<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    tools:context=".ResetPasswordFragment">

        <TextView
            android:id="@+id/reset_new_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/reset_new_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingStart="10dp"
            android:background="@drawable/rounded_background"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <TextView
            android:id="@+id/reset_confirm_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/reset_confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingStart="10dp"
            android:background="@drawable/rounded_background"
            android:inputType="textPassword"
            android:hint="@string/confirm_password" />
        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounder_button"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/reset_password" />
</LinearLayout>
