<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#292929"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/edit_playlist_button"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:maxWidth="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            android:text="@string/edit"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_centerInParent="true"
            android:text="@string/playlists" />

        <Button
            android:id="@+id/create_playlist_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:maxWidth="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:text="@string/create_playlist"
            android:textAlignment="center" />
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="503dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_relative_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>